# MinimalSynthVST2.4

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MinimalEditor.h  MinimalEffect.cpp  MinimalEffect.h  README.md  Resource.rc.in  clean_all  cmake_mrswatson  cmake_native  cmake_windows  links  test.mid  test32  test64  win-build32.bat  win-build64.bat  win-clean.bat  win-cmake.bat  win-dist.bat  windows.def
src/: Info.plist.in  MinimalEditor.h  MinimalEffect.cpp  MinimalEffect.h  icon.icns
vstsdk2.4/ZR3_v1/: Controls.cpp  Controls.h  Editor.cpp  Editor.h  FX.cpp  FX.h  Globals.h  Info.plist  flp.cpp  flp.h  flp2.def  flp2.dsp  flp2.dsw  flp_frame.cpp  flpmain.cpp  flpproc.cpp  readme.txt  res_flp2.rc  voice_classes.cpp  voice_classes.h  zr3_Prefix.pch
vstsdk2.4/ZR3_v1/English.lproj/: InfoPlist.strings
vstsdk2.4/ZR3_v1/zr3.xcodeproj/: MacAdmin.mode1v3  MacAdmin.pbxuser  project.pbxproj
vstsdk2.4/artwork/: Thumbs.db
vstsdk2.4/pluginterfaces/vst2.x/: aeffectx.h
vstsdk2.4/public.sdk/samples/vst2.x/adelay/: adelay.cpp  adelay.h  surrounddelay.cpp
vstsdk2.4/public.sdk/samples/vst2.x/adelay/editor/: sdeditor.cpp  sdeditor.h
vstsdk2.4/public.sdk/samples/vst2.x/adelay/editor/resources/: surrounddelay.rc
vstsdk2.4/public.sdk/samples/vst2.x/adelay/win/: surrounddelay.vcproj
vstsdk2.4/public.sdk/samples/vst2.x/minihost/source/: minihost.cpp
vstsdk2.4/public.sdk/samples/vst2.x/minihost/win/: minihost.vcproj
vstsdk2.4/public.sdk/samples/vst2.x/vstxsynth/source/: vstxsynth.cpp  vstxsynth.h
vstsdk2.4/public.sdk/source/vst2.x/: aeffeditor.h  audioeffect.cpp  audioeffect.h  audioeffectx.cpp  audioeffectx.h  vstplugmain.cpp
